# pad

./: .gitignore  CMakeLists.txt  benchmark.sh  benchmark_engine.sh
cmake/: Dependencies.cmake
include/: noise_gen.hpp  statistics.hpp  task.hpp  util.hpp
resources/shaders/: default2D_vert.glsl  default3D_vert.glsl
src/: CMakeLists.txt  pad.cpp
typ/: acm.typ  referencias_acm.bib
